--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,7 +1,6 @@
 .cart-name{
     margin:10px 0px 10px 217px;
     padding:0.5em;
-    
     font-size:32px;
 }
 
@@ -9,7 +8,8 @@
     margin:10px 0px 10px 217px;
     padding:0.5em;
     max-width:1350px;
-    height:280px;
+    height:auto;
+    margin-bottom:45px;
     display:flex;
     flex-direction: row;
     justify-content: space-between;
@@ -34,7 +34,6 @@
 
 .cart-content-left{
     display:flex;
-    justify-content:space-between;
     width:300px;
     height:100px;
     margin-top:12px;
@@ -50,8 +49,30 @@
 }
 
 .cart-content-left button{
-    width:45px;
-    height:45px;
-    margin-left:5px;
-    transform:translateY(20px);
+    width:35px;
+    height:35px;
+    margin-left:5px;   
+}
+
+
+.left-arrow{
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius:10px;
+    cursor:pointer;
+    width:30px;
+    height:30px;
+    border-style:none;
+    position:absolute;
+    transform:translate(-3px,65px)
+}
+
+.right-arrow{
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius:10px;
+    cursor:pointer;
+    width:30px;
+    height:30px;
+    border-style:none;
+    position:absolute;
+    transform:translate(-25px,65px)
 }
