--- a/src/components/CartOverlay/CartOverlayBackground.css
+++ b/src/components/CartOverlay/CartOverlayBackground.css
@@ -8,3 +8,11 @@
     transform:translateX(-9px)
 }
 
+.cart-overlay-background-white{
+    background-color: transparent;
+    position:absolute;
+    z-index:2;
+    width:100%;
+    height:200px;
+    transform:translateY(-100px)
+}
