--- a/src/components/CartOverlay/CartOverlayList.css
+++ b/src/components/CartOverlay/CartOverlayList.css
@@ -1,21 +1,27 @@
 .cart-item{
     margin:16px;
     padding:16px;
-    margin-top:48px;
+    margin-top:43px;
     position:relative;
     z-index:3;
     background-color: rgb(255, 255, 255);
-    width:325px;
+    width:395px;
     transform:translateX(-160px);
 }
 
+.left-content{
+    width:190px;
+    height:max-content;
+}
 
 .cart-overlay-list-content{
+    margin:5px;
     display:flex;
-    justify-content: space-between;
+    justify-content:space-between;
 }
 
 .cart-overlay-list-total-price{
+    margin-top:30px;
     padding:5px;
     display:flex;
     justify-content: space-between;
@@ -54,4 +60,10 @@
 .cart-overlay-list-checkout-button:hover{
     cursor:pointer;
     background-color:#079c2f ;
+}
+
+.cart-overlay-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
