--- a/src/components/Pdp/AddButton.css
+++ b/src/components/Pdp/AddButton.css
@@ -5,6 +5,7 @@
     border-style:none;
     width:282px;
     height:45px;
+    cursor:pointer;
 }
 
 .add-to-cart:hover{
@@ -12,8 +13,9 @@
 }
 
 .add-to-cart-disabled{
-    background-color: #5ece7c5d;
+    background-color: #2420209a;
     color:white;
+    cursor:not-allowed;
     font-size:16px;
     border-style:none;
     width:282px;
