--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -8,8 +8,6 @@
     margin:10px 0px 10px 217px;
     padding:0.5em;
     max-width:1350px;
-    height:auto;
-    margin-bottom:45px;
     display:flex;
     flex-direction: row;
     justify-content: space-between;
@@ -35,7 +33,7 @@
 .cart-content-left{
     display:flex;
     width:300px;
-    height:100px;
+    height:fit-content;
     margin-top:12px;
 }
 
