--- a/src/components/CartOverlay/CartOverlayBackground.css
+++ b/src/components/CartOverlay/CartOverlayBackground.css
@@ -2,7 +2,7 @@
     background-color:  rgba(57, 55, 72, 0.22);
     position:absolute;
     z-index:2;
-    height:1400px;
+    height:140%;
     width:100%;
     margin-top:100px;
     transform:translateX(-9px)
