--- a/src/components/Header/Currency.css
+++ b/src/components/Header/Currency.css
@@ -1,12 +1,5 @@
-select{
-    transform:translateX(-30px);
-    width:32px;
-    height:29px;
-    border-style:none;
-}
-
-
 .currency-container {
+    position:relative;
     transform:translateX(-30px);
     margin-top:5px;
     font-size:18px;
@@ -14,20 +7,22 @@ select{
     font-family:Raleway,sans-serif;
 }
 
-.dropdown-currency{
-    cursor:pointer;
-}
-
-.dropdown-items{
-    cursor:pointer;
-    position:relative;
-    transform:translateY(30px);
-    padding-left:20px;
-    width:70px;
+.dropdown-list{
+    position:absolute;
+    padding:15px 20px 0px 20px;
+    transform:translate(-15px,15px);
     background-color: white;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
-.current-currency{
-    position:fixed;
+.dropdown-items{
+    cursor:pointer;
+    margin-bottom:15px;
+    display:flex;
+    flex-direction: row;
+    width:55px;
+}
+
+.currency-vector{
+    margin-left:8px;
 }
