--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,76 +1,91 @@
-.cart-name{
-    margin:10px 0px 10px 217px;
-    padding:0.5em;
-    font-size:32px;
+.cart-container {
+  font-family: "Raleway";
 }
 
-.cart-content{
-    margin:10px 0px 10px 217px;
-    padding:0.5em;
-    max-width:1350px;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
+.cart-name {
+  margin: 10px 0px 10px 217px;
+  padding: 0.5em;
+  font-size: 32px;
 }
 
-.cart-content-right{
-    display:flex;
-    align-items: center;
-    height:240px;
+.cart-content {
+  margin: 10px 0px 10px 217px;
+  padding: 0.5em;
+  max-width: 1350px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.cart-img{
-    margin:5px;
-    margin-top:15px;   
+.cart-content-right {
+  display: flex;
+  align-items: center;
+  height: 240px;
 }
 
-.cart-counter{
-    display:flex;
-    margin-top:20px;
-    height:187px;
+.cart-img {
+  margin: 5px;
+  margin-top: 15px;
 }
 
-.cart-content-left{
-    display:flex;
-    width:300px;
-    height:fit-content;
-    margin-top:12px;
+.cart-counter {
+  display: flex;
+  margin-top: 20px;
+  height: 187px;
 }
 
-.cart-content{
-    border-top:1px solid #E5E5E5;
+.cart-content-left {
+  display: flex;
+  width: 300px;
+  height: fit-content;
+  margin-top: 12px;
 }
 
-.cart-counter button{
-    width:45px;
-    height:45px
+.cart-content {
+  border-top: 1px solid #e5e5e5;
 }
 
-.cart-content-left button{
-    width:35px;
-    height:35px;
-    margin-left:5px;   
+.cart-counter button {
+  width: 45px;
+  height: 45px;
 }
 
-
-.left-arrow{
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius:10px;
-    cursor:pointer;
-    width:30px;
-    height:30px;
-    border-style:none;
-    position:absolute;
-    transform:translate(-3px,65px)
+.cart-content-left button {
+  width: 35px;
+  height: 35px;
+  margin-left: 5px;
 }
 
-.right-arrow{
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius:10px;
-    cursor:pointer;
-    width:30px;
-    height:30px;
-    border-style:none;
-    position:absolute;
-    transform:translate(-25px,65px)
+.left-arrow {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  border-style: none;
+  position: absolute;
+  transform: translate(-3px, 65px);
+}
+
+.right-arrow {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  border-style: none;
+  position: absolute;
+  transform: translate(-25px, 65px);
+}
+
+.cart-footer {
+  margin: 10px 0px 10px 217px;
+  padding: 1em;
+  font-weight: 400;
+  border-top: 1px solid #e5e5e5;
+}
+
+.cart-footer-right {
+  font-weight: 700;
+  margin-bottom: 16px;
 }
