--- a/src/components/CartOverlay/CartOverlayList.css
+++ b/src/components/CartOverlay/CartOverlayList.css
@@ -1,68 +1,70 @@
-.cart-item{
-    margin:16px;
-    padding:16px;
-    position:absolute;
-    z-index:3;
-    background-color: rgb(255, 255, 255);
-    width:395px;
-    transform:translate(-480px,61px);
+.cart-item {
+  margin: 16px;
+  padding: 16px;
+  position: absolute;
+  z-index: 3;
+  background-color: rgb(255, 255, 255);
+  width: 395px;
+  max-height: 500px;
+  transform: translate(-480px, 61px);
+  overflow-y: scroll;
 }
 
-.left-content{
-    width:190px;
-    height:max-content;
+.left-content {
+  width: 190px;
+  height: max-content;
 }
 
-.cart-overlay-list-content{
-    margin:5px;
-    display:flex;
-    justify-content:space-between;
+.cart-overlay-list-content {
+  margin: 5px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.cart-overlay-list-total-price{
-    margin-top:30px;
-    padding:5px;
-    display:flex;
-    justify-content: space-between;
+.cart-overlay-list-total-price {
+  margin-top: 30px;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.cart-overlay-list-view-bag-button{
-    background-color: transparent;
-    color:black;
-    font-size:14px;
-    width:140px;
-    height:43px;
-    border:1px solid black;
+.cart-overlay-list-view-bag-button {
+  background-color: transparent;
+  color: black;
+  font-size: 14px;
+  width: 140px;
+  height: 43px;
+  border: 1px solid black;
 }
 
-.cart-overlay-list-checkout-button{
-    background-color: #5ECE7B;
-    color:white;
-    font-size:14px;
-    width:140px;
-    height:43px;
-    border-style:none;
+.cart-overlay-list-checkout-button {
+  background-color: #5ece7b;
+  color: white;
+  font-size: 14px;
+  width: 140px;
+  height: 43px;
+  border-style: none;
 }
 
-.cart-overlay-list-buttons{
-    display:flex;
-    padding:5px;
-    justify-content: space-between;
+.cart-overlay-list-buttons {
+  display: flex;
+  padding: 5px;
+  justify-content: space-between;
 }
 
-.cart-overlay-list-view-bag-button:hover{
-    background-color: #1D1F22;
-    color:white;
-    cursor:pointer;
+.cart-overlay-list-view-bag-button:hover {
+  background-color: #1d1f22;
+  color: white;
+  cursor: pointer;
 }
 
-.cart-overlay-list-checkout-button:hover{
-    cursor:pointer;
-    background-color:#079c2f ;
+.cart-overlay-list-checkout-button:hover {
+  cursor: pointer;
+  background-color: #079c2f;
 }
 
-.cart-overlay-img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.cart-overlay-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
