--- a/src/components/Header/Navbar.css
+++ b/src/components/Header/Navbar.css
@@ -14,6 +14,7 @@ button{
 
 .navbar-brand{
     outline-offset: 110px;
+    font-size: 16px;
     padding:0 10px 32px 10px;
     line-height: 10px;
     border-style:none;
@@ -24,6 +25,7 @@ button{
     width:200px;
     height:30px;
     justify-content: space-between;   
+    font-family: 'Raleway';
 }
 
 
