--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,17 +1,15 @@
 .cart-container {
   font-family: "Raleway";
+  padding: 2rem 3rem;
 }
 
 .cart-name {
-  margin: 10px 0px 10px 217px;
   padding: 0.5em;
   font-size: 32px;
 }
 
 .cart-content {
-  margin: 10px 0px 10px 217px;
   padding: 0.5em;
-  max-width: 1350px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -79,7 +77,6 @@
 }
 
 .cart-footer {
-  margin: 10px 0px 10px 217px;
   padding: 1em;
   font-weight: 400;
   border-top: 1px solid #e5e5e5;
