--- a/src/components/Header/Navbar.css
+++ b/src/components/Header/Navbar.css
@@ -3,13 +3,12 @@ button{
 }
 
 .header{
-    width:1440px;
-    height:40px;
+    height:1.8rem;
     display:flex;
     justify-content:space-between;
     align-items:center;
-    padding:0.5rem;
-    margin:10px 0px 10px 217px;
+    padding: 2rem 3rem;
+    
 }
 
 .navbar-brand{
@@ -31,8 +30,7 @@ button{
 
 .actions{
     display:flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     width:120px;
     height:30px;
 }
