--- a/src/components/Home/Category.css
+++ b/src/components/Home/Category.css
@@ -7,9 +7,6 @@
 }
 
 .container-products {
-  max-width: 1440px;
-  height: 1513px;
-  margin: 10px 0px 10px 217px;
-  padding: 0.5em;
+  padding: 0rem 3rem 0rem 3rem;
   z-index: 1;
 }
