--- a/src/components/Pdp/Pdp.css
+++ b/src/components/Pdp/Pdp.css
@@ -1,14 +1,16 @@
-.item-container{
-    display:flex;
-    width:1440px;
-    height:745px; 
+.item-container {
+    display: flex;
+    justify-content: flex-start;
+    width: 90vw;
+    padding: 2rem 3rem;
 }
-
 
 .item-container-1{
     display:flex;
-    margin:10px 0px 10px 217px;
+    width: 100%;
+    justify-content: space-between;
     padding:0.5em;
+    flex-wrap: wrap;
 }
 
 .item-name{
